--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="container">
         <h1>Welcome to Oil & Microbiology</h1>
-        <img src="your-image.jpg" alt="Oil and Microbiology" class="image">
+        <img src="gold.jpg" alt="Oil and Microbiology" class="image">
         
         <div class="about">
             <h2>About Us</h2>
