--- a/index.html
+++ b/index.html
@@ -5,56 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oil & Microbiology</title>
     <style>
+        /* Background with oil-like gradient */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             text-align: center;
-            background-color: #e6f2ff;
+            background: linear-gradient(to bottom, #1a1a1a, #704214);
+            color: white;
         }
+
         .container {
             width: 80%;
             margin: auto;
             padding: 20px;
         }
+
+        /* Image styling */
         .image {
             width: 100%;
             max-width: 800px;
             height: auto;
-            border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            border-radius: 15px;
+            box-shadow: 4px 4px 20px rgba(255, 215, 0, 0.3); /* Gold glow */
         }
-        .about {
-            background: white;
-            padding: 20px;
+
+        /* Button Styling */
+        .btn {
+            display: inline-block;
             margin-top: 20px;
-            border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #003366;
-            font-size: 36px;
-        }
-        h2 {
-            color: #00509e;
-        }
-        p {
+            padding: 15px 30px;
             font-size: 18px;
-            color: #333;
-            line-height: 1.6;
+            font-weight: bold;
+            text-decoration: none;
+            background: #ADFF2F; /* Neon Green */
+            color: black;
+            border-radius: 10px;
+            box-shadow: 3px 3px 10px rgba(173, 255, 47, 0.5);
+            transition: 0.3s ease;
+        }
+
+        .btn:hover {
+            background: #32CD32; /* Darker Green */
+            box-shadow: 3px 3px 15px rgba(50, 205, 50, 0.7);
+        }
+
+        /* Footer with logo */
+        .footer {
+            margin-top: 40px;
+            padding: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            border-top: 2px solid #FFD700;
+        }
+
+        .logo {
+            width: 100px;
+            height: auto;
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
 
     <div class="container">
+    	<!-- About Us Button -->
+        <a href="about.html" class="btn">About Us</a>
+        
         <h1>Welcome to Oil & Microbiology</h1>
         <img src="gold.jpg" alt="Oil and Microbiology" class="image">
-        
-        <div class="about">
-            <h2>About Us</h2>
-            <p>We specialize in the intersection of oil and microbiology, exploring microbial solutions for oil recovery, bioremediation, and microbial enhanced oil recovery (MEOR). Our research and innovations help industries optimize oil production while ensuring environmental sustainability.</p>
-        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <div class="footer">
+        <p>© 2025 Oil & Microbiology Research</p>
+        <img src="shahid-beheshti.png" alt="Logo" class="logo">
     </div>
 
 </body>
